2024r1 core